css/style.css
/* AMPDMarine main CSS3 file is also using tailwind utility classes. */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    color: rgba(240, 240, 240, 1);
    text-shadow: 12px 12px 8px #000;
    -webkit-text-stroke: 0.1px #000;
    min-height: 100vh;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    background-color: rgb(2, 0, 36);
    background-color: linear-gradient(0deg, rgba(0, 0, 0, 1) 8%, rgba(9, 9, 121, 1) 48%, rgba(0, 212, 255, 1) 100%);
    background-image: url(../images/deep_sapphire.jpg);
    background-position: top center;
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
}

.main-container {
    background-color: rgba(0, 0, 0, 0.7);
    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0) 100%);
}

header {
    background-color: rgba(0, 0, 0, 0.8);
    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 40%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0) 100%);
}

.header-logo {
    background-color: white;
}

.header-border {
    border-bottom: 5px solid #e78200;
}

.header-border-first {
    border-top: 5px solid #e78200;
}

.link-home {
    width: 200px;
}

.active-flex {
    display: flex;
}

.banner {
    background-image: url(../images/banner.jpg);
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    width: 100vw;
    height: 400px;
}

.logo-glow {
    /* text-shadow: 14px 14px 2px rgba(224, 224, 237, 0.6); */
    -webkit-filter: drop-shadow(0 0 2px #fff);
    filter: drop-shadow(0 0 2px #fff);
}

.main-nav {
    background-color: #000;
    min-height: 80px;
}

#nav-toggle {
    right: 0;
}

.brand {
    border: solid 0.5px #ccc;
}

a:hover {
    color: #e78200;
}

